# rawtherapee-timelapse

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  interpolate-simple.py  interpolate.py  pyproject.toml  run-docker.sh
src/rawtherapee_timelapse/: __init__.py  cli.py
tests/: __init__.py  test_aspect_crop.py  test_easing.py  test_integration.py  test_pp3_handling.py  test_zoom.py  test_zoom_factor.py
